Fix alignment for non-typekit fonts"

--- a/css/fonts-customizer.css
+++ b/css/fonts-customizer.css
@@ -27,9 +27,9 @@ h3.jetpack-fonts__type-header {
 	border-radius: 3px;
 	cursor: pointer;
 	height: 45px;
-	line-height: 48px;
-	font-size: 20px;
-	padding-left: 10px;
+	line-height: 35px;
+  font-size: 25px;
+  padding-left: 10px;
 }
 
 .jetpack-fonts__current-font--default:after {
